fixing background on pt2

--- a/Index.css
+++ b/Index.css
@@ -87,9 +87,9 @@ body {
 }
 
 #pt2 {
-    height: 100%;
+    min-height: 100%;
     background-image: url("tempbg2.png");
-    background-size: 100%;
+/*    background-size: 100%;*/
     background-repeat: no-repeat;
 }
 
