--- a/Index.css
+++ b/Index.css
@@ -24,6 +24,11 @@ body {
     height: 100%;
 }
 
+a {
+    color: rgb(220, 220, 220);
+    text-decoration: none;
+}
+
 #pt1 {
     min-height: 100%;
     background-image: url("bg1.png");
@@ -31,7 +36,7 @@ body {
     background-repeat: no-repeat;
 }
 
-#header, #header2, #header3, #header4, #header5 {
+#header {
     color: rgb(220, 220, 220);
     min-height: 200px;
     height: auto;
@@ -47,12 +52,13 @@ body {
     -webkit-animation-fill-mode: forwards;
 }
 
-#header, #header2 {
+#header {
     background-color: rgba(0, 0, 0, 0.5);
 }
 
 #title {
     font-size: 90px;
+    font-size: 4.7vw;
     margin-top: 60px;
     display: inline-block;
     text-shadow: 0px 3px 5px rgba(0, 0, 0, 0.5);
@@ -62,7 +68,7 @@ body {
     bottom: 0;
     position: fixed;
     font-family: Roboto;
-    color: rgb(220, 220, 220);
+    color: #dcdcdc;
     font-size: 30px;
     text-align: center;
     width: 100%;
@@ -110,20 +116,67 @@ body {
     background-repeat: no-repeat;
 }
 
-#header3 {
-    background-color: rgba(0, 0, 0, 0.4);
+.h3 {
+    background-color: rgba(0, 0, 0, 0.4) !important;
 }
 
-#header4 {
-    background-color: rgba(0, 0, 0, 0.3);
+.h4 {
+    background-color: rgba(0, 0, 0, 0.3) !important;
 }
 
-#header5 {
-    background-color: rgba(0, 0, 0, 0.2);
-    min-height: 220px;
+.h5 {
+    background-color: rgba(0, 0, 0, 0.2) !important;
+    min-height: 225px !important;
 }
 
-#header5 #title {
+.h5 #title {
     margin-top: 45px;
     font-size: 130px;
+    font-size: 6.75vw;
+}
+
+#pt3 {
+    min-height: 100%;
+    background-image: url("bg4.png");
+    background-repeat: no-repeat;
+}
+
+#content {
+    background-color: rgba(0, 0, 0, 0.5);
+    margin: 30px;
+    color: #dcdcdc;
+    padding: 25px;
+    padding-left: 50px;
+    padding-right: 50px;
+    text-align: justify;
+/*
+    opacity: 0;
+    animation-name: headerin;
+*/
+    animation-delay: 0.9s;
+    animation-duration: 2s;
+    animation-fill-mode: forwards;
+    -webkit-animation-name: headerin;
+    -webkit-animation-delay: 0.2s;
+    -webkit-animation-duration: 2s;
+    -webkit-animation-fill-mode: forwards;
+}
+
+#title2 {
+    font-size: 2.5vw;
+    margin-bottom: 10px;
+    text-align: center;
+}
+
+#txt {  
+    font-size: 1.1vw;
+    width: 100%;
+    line-height: 120%;
+    letter-spacing: 0px;
+    transition: letter-spacing 0.3s;
+}
+
+#txt:hover {
+    transition: letter-spacing 0.3s;
+    letter-spacing: 1px;
 }
