added temp background before images are loaded

--- a/Index.css
+++ b/Index.css
@@ -31,6 +31,7 @@ a {
 
 #pt1 {
     min-height: 100%;
+    background-color: #45a4ed;
     background-image: url("bg1.png");
 /*    background-size: 100%;*/
     background-repeat: no-repeat;
@@ -111,6 +112,7 @@ a {
 
 #pt2 {
     min-height: 100%;
+    background-color: #919195;
     background-image: url("bg5.png");
 /*    background-size: 100%;*/
     background-repeat: no-repeat;
@@ -137,6 +139,7 @@ a {
 
 #pt3 {
     min-height: 100%;
+    background-color: #62925e;
     background-image: url("bg4.png");
     background-repeat: no-repeat;
 }
