--- a/Index.css
+++ b/Index.css
@@ -65,6 +65,82 @@ a {
     text-shadow: 0px 3px 5px rgba(0, 0, 0, 0.5);
 }
 
+.subtitle {
+    text-align: center;
+    font-size: 1.3vw !important;
+}
+
+.h1 {
+    line-height: 150%;
+}
+
+#content {
+    background-color: rgba(0, 0, 0, 0.5);
+    margin: 30px;
+    color: #dcdcdc;
+    padding: 25px;
+    padding-left: 50px;
+    padding-right: 50px;
+    text-align: justify;
+    opacity: 0;
+    animation-name: headerin;
+    animation-delay: 0.9s;
+    animation-duration: 2s;
+    animation-fill-mode: forwards;
+    -webkit-animation-name: headerin;
+    -webkit-animation-delay: 0.9s;
+    -webkit-animation-duration: 2s;
+    -webkit-animation-fill-mode: forwards;
+    -moz-animation-name: headerin;
+    -moz-animation-delay: 0.9s;
+    -moz-animation-duration: 2s;
+    -moz-animation-fill-mode: forwards;
+    -o-animation-name: headerin;
+    -o-animation-delay: 0.9s;
+    -o-animation-duration: 2s;
+    -o-animation-fill-mode: forwards;
+}
+
+#title2 {
+    font-size: 2.5vw;
+    margin-bottom: 10px;
+    text-align: center;
+    text-shadow: 0px 3px 5px black;
+}
+
+#txt {  
+    font-size: 1.1vw;
+    width: 100%;
+    line-height: 120%;
+    letter-spacing: 0px;
+    text-shadow: 0px 3px 5px black;
+    transition: letter-spacing 0.3s;
+}
+
+td {
+    width: 33% !important;
+    vertical-align: top;
+}
+
+.info {
+    text-align: center;
+    border-left: 1px solid #dcdcdc;
+    border-right: 1px solid #dcdcdc;
+}
+
+.ip {
+    color:#c0c0c0;
+}
+
+.links {
+    text-align: right;
+}
+
+#txt.link:hover {
+    transition: letter-spacing 0.3s;
+    letter-spacing: 1px;
+}
+
 #scrolldown {
     bottom: 0;
     position: fixed;
@@ -142,42 +218,4 @@ a {
     background-color: #62925e;
     background-image: url("bg4.jpg");
     background-repeat: no-repeat;
-}
-
-#content {
-    background-color: rgba(0, 0, 0, 0.5);
-    margin: 30px;
-    color: #dcdcdc;
-    padding: 25px;
-    padding-left: 50px;
-    padding-right: 50px;
-    text-align: justify;
-    opacity: 0;
-    animation-name: headerin;
-    animation-delay: 0.9s;
-    animation-duration: 2s;
-    animation-fill-mode: forwards;
-    -webkit-animation-name: headerin;
-    -webkit-animation-delay: 0.2s;
-    -webkit-animation-duration: 2s;
-    -webkit-animation-fill-mode: forwards;
-}
-
-#title2 {
-    font-size: 2.5vw;
-    margin-bottom: 10px;
-    text-align: center;
-}
-
-#txt {  
-    font-size: 1.1vw;
-    width: 100%;
-    line-height: 120%;
-    letter-spacing: 0px;
-    transition: letter-spacing 0.3s;
-}
-
-#txt:hover {
-    transition: letter-spacing 0.3s;
-    letter-spacing: 1px;
 }
